src/main/public/stylesheets/feesCustom.css
/* Large table data columns */
.font-xxsmall {
  font-family: "nta", Arial, sans-serif;
  font-weight: 300;
  text-transform: none;
  font-size: 13px;
  line-height: 1.14286; }

/* Large table header columns */
.bold-xxsmall {
  font-family: "nta", Arial, sans-serif;
  font-weight: 600;
  text-transform: none;
  font-size: 14px;
  line-height: 1.14286; }


.success-summary {
  border: 6px solid #0e64b1;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 12px 8px; }

